[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/indy/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://fonts/basis33.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/indy/tile377.png" type="Texture" id=4]
[ext_resource path="res://scenes/Actor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Fade.gd" type="Script" id=6]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1
light_mode = 1

[sub_resource type="TileSet" id=3]
0/name = "tile377.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 2, 2 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ImageTexture" id=1]
size = Vector2( 288, 288 )

[sub_resource type="ImageTexture" id=2]
size = Vector2( 32, 32 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65536, 0, 0, 65553, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131089, 0, 0, 196608, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196625, 0, 0, 262144, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262161, 0, 0, 327680, 0, 0, 327691, 0, 0, 327697, 0, 0, 393216, 0, 0, 393233, 0, 0, 458752, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458769, 0, 0, 524288, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524305, 0, 0, 589824, 0, 0, 589827, 0, 0, 589828, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589841, 0, 0, 655360, 0, 0, 655363, 0, 0, 655364, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655377, 0, 0, 720896, 0, 0, 720899, 0, 0, 720900, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720910, 0, 0, 720913, 0, 0, 786432, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786449, 0, 0, 851968, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851985, 0, 0, 917504, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917521, 0, 0, 983040, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983057, 0, 0, 1048576, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048593, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
format = 1

[node name="HERO" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 368, 176 )
is_hero = true

[node name="ColorRect" type="Control" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.360784, 0.768627, 0.054902, 0.521569 )

[node name="ColorRect2" type="Control" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.768627, 0.054902, 0.054902, 0.521569 )

[node name="Ceiling" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Hotspots" type="TileMap" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 4 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131079, 0, 0, 327687, 0, 0, 393220, 0, 0 )

[node name="Monsters" type="TileMap" parent="."]
visible = false
modulate = Color( 0, 0.486275, 1, 0.737255 )
material = SubResource( 4 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65541, 0, 0, 196612, 0, 0, 327688, 0, 0, 393224, 0, 0, 589832, 0, 0 )

[node name="SplashScreen" type="Sprite" parent="."]
visible = false
position = Vector2( 206, 180 )
texture = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 368, 176 )
current = true
script = ExtResource( 7 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Fade" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
visible = false
margin_left = 422.0
margin_top = 39.0
margin_right = 823.0
margin_bottom = 560.0

[node name="VBoxContainer" type="GridContainer" parent="UI/ScrollContainer"]
margin_right = 384.0
margin_bottom = 32.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 12

[node name="TextureRect" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = SubResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect5" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect6" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect7" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect8" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect9" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 256.0
margin_right = 288.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect10" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect11" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 320.0
margin_right = 352.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="TextureRect12" type="TextureRect" parent="UI/ScrollContainer/VBoxContainer"]
margin_left = 352.0
margin_right = 384.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
texture = SubResource( 2 )

[node name="Button" type="Button" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -198.0
margin_top = 10.0
margin_right = -104.0
margin_bottom = 30.0
text = "test"

[node name="SpinBox" type="SpinBox" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = 32.0
max_value = 365.0
rounded = true

[node name="Label" type="RichTextLabel" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = 41.0
focus_mode = 2
custom_constants/line_separation = -5
custom_fonts/normal_font = ExtResource( 3 )
text = "test"
selection_enabled = true

[node name="Label2" type="Label" parent="UI"]
margin_left = 11.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 357.0
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 3 )
text = "test"

[node name="FPS" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -275.57
margin_top = 12.681
margin_right = -209.57
margin_bottom = 59.681
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 3 )
text = "test"
align = 2

[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="UI/SpinBox" to="." method="_on_SpinBox_value_changed"]
